--- a/simple-shop-ui/src/app/feature/customer/customer-list/customer-list.component.html
+++ b/simple-shop-ui/src/app/feature/customer/customer-list/customer-list.component.html
@@ -36,7 +36,7 @@
 }
 <div class="container mx-auto mt-5 px-5 pb-5">
   <h1 class="font-semibold text-2xl tracking-wide">Customer List</h1>
-  <div class="space-y-3 mt-6 md:flex justify-between">
+  <div class="space-y-3 mt-6 md:flex justify-between items-center">
     <label
       class="input input-bordered input-primary w-full max-w-xs flex items-center gap-2"
     >
