--- a/simple-shop-ui/src/app/feature/item/item-list/item-list.component.html
+++ b/simple-shop-ui/src/app/feature/item/item-list/item-list.component.html
@@ -98,10 +98,10 @@
           <td>
             {{ item.name }}
           </td>
-          <td>{{ item.code}}</td>
-          <td>{{ item.stock}}</td>
-          <td>{{ item.price | currency:'IDR':'symbol':'1.0-0'}}</td>
-          <td>{{ item.lastRestockDate ? item.lastRestockDate: "-"}}</td>
+          <td>{{ item.code }}</td>
+          <td>{{ item.stock }}</td>
+          <td>{{ item.price | currency : "IDR" : "symbol" : "1.0-0" }}</td>
+          <td>{{ item.lastRestockDate ? item.lastRestockDate : "-" }}</td>
           <td>
             <div
               [class]="
@@ -208,26 +208,7 @@
   </div>
 </div>
 
-<button
-  class="btn btn-primary btn-circle fixed bottom-5 right-5 shadow-lg hover:bg-primary-focus transition-colors duration-300"
-  aria-label="Add New"
-  routerLink="/add-item"
->
-  <svg
-    xmlns="http://www.w3.org/2000/svg"
-    class="h-6 w-6 text-white"
-    fill="none"
-    viewBox="0 0 24 24"
-    stroke="currentColor"
-  >
-    <path
-      stroke-linecap="round"
-      stroke-linejoin="round"
-      stroke-width="2"
-      d="M12 4v16m8-8H4"
-    />
-  </svg>
-</button>
+<app-add-button link="/add-item"></app-add-button>
 <input
   type="checkbox"
   id="delete-confirm-modal"
@@ -248,4 +229,3 @@
     </div>
   </label>
 </label>
-
