--- a/simple-shop-ui/src/app/feature/item/update-item/update-item.component.html
+++ b/simple-shop-ui/src/app/feature/item/update-item/update-item.component.html
@@ -1,228 +1,211 @@
 <div class="flex h-screen justify-center items-center py-4">
-    <div class="w-[320px] max-h-[calc(100vh-32px)]">
-      @if (isShowingNotif) { @if(successMessage){
-      <div role="alert" class="alert alert-success">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="h-6 w-6 shrink-0 stroke-current"
-          fill="none"
-          viewBox="0 0 24 24"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
-          />
-        </svg>
-        <span>{{ successMessage }}</span>
-      </div>
-      } @if(errorMessage){
-      <div role="alert" class="alert alert-error">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="h-6 w-6 shrink-0 stroke-current"
-          fill="none"
-          viewBox="0 0 24 24"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z"
-          />
-        </svg>
-        <span>{{ errorMessage }}</span>
-      </div>
-      } }
-      <div class="flex space-x-2 items-center">
-        <button class="btn btn-circle btn-ghost" routerLink="/item">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="1.2em"
-            height="1.2em"
-            viewBox="0 0 512 512"
-          >
-            <path
-              fill="none"
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="48"
-              d="M244 400L100 256l144-144M120 256h292"
-            />
-          </svg>
-        </button>
-        <h1 class="font-semibold text-2xl tracking-wide">Update Item</h1>
-      </div>
-      <div class="flex justify-center mt-4">
-        <div class="w-52 mt-4">
-          <img
-            [src]="
-              imagePreview
-                ? imagePreview
-                : 'https://api.dicebear.com/9.x/icons/svg?seed=Kingston'
-            "
-            alt="Avatar"
-            class="rounded-lg"
-          />
-        </div>
-      </div>
-      <form class="mt-4" [formGroup]="itemForm" (ngSubmit)="onSubmit()">
-        <div class="space-y-1">
-          <label class="form-control w-full max-w-xs">
-            <div class="label">
-              <span class="label-text">Name</span>
-            </div>
-            <input
-              type="text"
-              placeholder="Type here"
-              class="input input-primary input-bordered w-full max-w-xs"
-              formControlName="name"
-              required
-            />
-            <div
-              class="label"
-              *ngIf="
-                itemForm.get('name')?.invalid &&
-                (itemForm.get('name')?.dirty || itemForm.get('name')?.touched)
-              "
-            >
-              <span
-                class="label-text-alt text-error"
-                *ngIf="itemForm.get('name')?.errors?.['required']"
-                >Name is required</span
-              >
-            </div>
-          </label>
-          <label class="form-control w-full max-w-xs">
-            <div class="label">
-              <span class="label-text">Stock</span>
-            </div>
-            <input
-              type="number"
-              placeholder="Type here"
-              class="input input-primary input-bordered w-full max-w-xs"
-              formControlName="stock"
-              required
-            />
-            <div
-              class="label"
-              *ngIf="
-                itemForm.get('stock')?.invalid &&
-                (itemForm.get('stock')?.dirty || itemForm.get('stock')?.touched)
-              "
-            >
-              <span
-                class="label-text-alt text-error"
-                *ngIf="itemForm.get('stock')?.errors?.['required']"
-                >Stock is required</span
-              >
-            </div>
-          </label>
-          <label class="form-control w-full max-w-xs">
-            <div class="label">
-              <span class="label-text">Price</span>
-            </div>
-            <input
-              type="number"
-              placeholder="Type here"
-              class="input input-primary input-bordered w-full max-w-xs"
-              formControlName="price"
-              required
-            />
-            <div
-              class="label"
-              *ngIf="
-                itemForm.get('price')?.invalid &&
-                (itemForm.get('price')?.dirty || itemForm.get('price')?.touched)
-              "
-            >
-              <span
-                class="label-text-alt text-error"
-                *ngIf="itemForm.get('price')?.errors?.['required']"
-                >Price is required</span
-              >
-            </div>
-          </label>
-          <label class="form-control w-full max-w-xs">
-            <div class="label">
-              <span class="label-text">Last Restock Date</span>
-            </div>
-            <input
-              type="date"
-              placeholder="Type here"
-              class="input input-primary input-bordered w-full max-w-xs"
-              formControlName="lastRestockDate"
-              required
-            />
-            <div
-              class="label"
-              *ngIf="
-                itemForm.get('lastRestockDate')?.invalid &&
-                (itemForm.get('lastRestockDate')?.dirty ||
-                  itemForm.get('lastRestockDate')?.touched)
-              "
-            >
-              <span
-                class="label-text-alt text-error"
-                *ngIf="itemForm.get('lastRestockDate')?.errors?.['required']"
-                >Last restock date is required</span
-              >
-            </div>
-          </label>
-          <label class="form-control">
-            <div class="label">
-              <span class="label-text">Description</span>
-            </div>
-            <textarea
-              class="textarea textarea-primary textarea-md w-full max-w-xs"
-              formControlName="desc"
-              placeholder="Type here"
-            ></textarea>
-            <div
-              class="label"
-              *ngIf="
-                itemForm.get('desc')?.invalid &&
-                (itemForm.get('desc')?.dirty || itemForm.get('desc')?.touched)
-              "
-            >
-              <span
-                class="label-text-alt text-error"
-                *ngIf="itemForm.get('desc')?.errors?.['required']"
-                >Description is required</span
-              >
-            </div>
-          </label>
-          <label class="form-control w-full max-w-xs">
-            <div class="label">
-              <span class="label-text">Item Picture</span>
-            </div>
-            <input
-              type="file"
-              class="file-input file-input-bordered file-input-primary w-full max-w-xs"
-              (change)="onFileSelect($event)"
-            />
-            <div
-              class="label"
-              *ngIf="
-                itemForm.get('imgFile')?.invalid &&
-                (itemForm.get('imgFile')?.dirty ||
-                  itemForm.get('imgFile')?.touched)
-              "
-            >
-              <span
-                class="label-text-alt text-error"
-                *ngIf="itemForm.get('imgFile')?.errors?.['required']"
-                >Item picture is required</span
-              >
-            </div>
-          </label>
-        </div>
-        <div class="mt-6 pb-6">
-          <button class="btn btn-primary w-full" type="submit">Submit</button>
-        </div>
-      </form>
+  <div class="w-[320px] max-h-[calc(100vh-32px)]">
+    @if (isShowingNotif) { @if(successMessage){
+    <div role="alert" class="alert alert-success">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="h-6 w-6 shrink-0 stroke-current"
+        fill="none"
+        viewBox="0 0 24 24"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
+        />
+      </svg>
+      <span>{{ successMessage }}</span>
     </div>
+    } @if(errorMessage){
+    <div role="alert" class="alert alert-error">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="h-6 w-6 shrink-0 stroke-current"
+        fill="none"
+        viewBox="0 0 24 24"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z"
+        />
+      </svg>
+      <span>{{ errorMessage }}</span>
+    </div>
+    } }
+    <app-page-detail-title
+      link="/item"
+      title="Update item"
+    ></app-page-detail-title>
+    <div class="flex justify-center mt-4">
+      <div class="w-52 mt-4">
+        <img
+          [src]="
+            imagePreview
+              ? imagePreview
+              : 'https://api.dicebear.com/9.x/icons/svg?seed=Kingston'
+          "
+          alt="Avatar"
+          class="rounded-lg"
+        />
+      </div>
+    </div>
+    <form class="mt-4" [formGroup]="itemForm" (ngSubmit)="onSubmit()">
+      <div class="space-y-1">
+        <label class="form-control w-full max-w-xs">
+          <div class="label">
+            <span class="label-text">Name</span>
+          </div>
+          <input
+            type="text"
+            placeholder="Type here"
+            class="input input-primary input-bordered w-full max-w-xs"
+            formControlName="name"
+            required
+          />
+          <div
+            class="label"
+            *ngIf="
+              itemForm.get('name')?.invalid &&
+              (itemForm.get('name')?.dirty || itemForm.get('name')?.touched)
+            "
+          >
+            <span
+              class="label-text-alt text-error"
+              *ngIf="itemForm.get('name')?.errors?.['required']"
+              >Name is required</span
+            >
+          </div>
+        </label>
+        <label class="form-control w-full max-w-xs">
+          <div class="label">
+            <span class="label-text">Stock</span>
+          </div>
+          <input
+            type="number"
+            placeholder="Type here"
+            class="input input-primary input-bordered w-full max-w-xs"
+            formControlName="stock"
+            required
+          />
+          <div
+            class="label"
+            *ngIf="
+              itemForm.get('stock')?.invalid &&
+              (itemForm.get('stock')?.dirty || itemForm.get('stock')?.touched)
+            "
+          >
+            <span
+              class="label-text-alt text-error"
+              *ngIf="itemForm.get('stock')?.errors?.['required']"
+              >Stock is required</span
+            >
+          </div>
+        </label>
+        <label class="form-control w-full max-w-xs">
+          <div class="label">
+            <span class="label-text">Price</span>
+          </div>
+          <input
+            type="number"
+            placeholder="Type here"
+            class="input input-primary input-bordered w-full max-w-xs"
+            formControlName="price"
+            required
+          />
+          <div
+            class="label"
+            *ngIf="
+              itemForm.get('price')?.invalid &&
+              (itemForm.get('price')?.dirty || itemForm.get('price')?.touched)
+            "
+          >
+            <span
+              class="label-text-alt text-error"
+              *ngIf="itemForm.get('price')?.errors?.['required']"
+              >Price is required</span
+            >
+          </div>
+        </label>
+        <label class="form-control w-full max-w-xs">
+          <div class="label">
+            <span class="label-text">Last Restock Date</span>
+          </div>
+          <input
+            type="date"
+            placeholder="Type here"
+            class="input input-primary input-bordered w-full max-w-xs"
+            formControlName="lastRestockDate"
+            required
+          />
+          <div
+            class="label"
+            *ngIf="
+              itemForm.get('lastRestockDate')?.invalid &&
+              (itemForm.get('lastRestockDate')?.dirty ||
+                itemForm.get('lastRestockDate')?.touched)
+            "
+          >
+            <span
+              class="label-text-alt text-error"
+              *ngIf="itemForm.get('lastRestockDate')?.errors?.['required']"
+              >Last restock date is required</span
+            >
+          </div>
+        </label>
+        <label class="form-control">
+          <div class="label">
+            <span class="label-text">Description</span>
+          </div>
+          <textarea
+            class="textarea textarea-primary textarea-md w-full max-w-xs"
+            formControlName="desc"
+            placeholder="Type here"
+          ></textarea>
+          <div
+            class="label"
+            *ngIf="
+              itemForm.get('desc')?.invalid &&
+              (itemForm.get('desc')?.dirty || itemForm.get('desc')?.touched)
+            "
+          >
+            <span
+              class="label-text-alt text-error"
+              *ngIf="itemForm.get('desc')?.errors?.['required']"
+              >Description is required</span
+            >
+          </div>
+        </label>
+        <label class="form-control w-full max-w-xs">
+          <div class="label">
+            <span class="label-text">Item Picture</span>
+          </div>
+          <input
+            type="file"
+            class="file-input file-input-bordered file-input-primary w-full max-w-xs"
+            (change)="onFileSelect($event)"
+          />
+          <div
+            class="label"
+            *ngIf="
+              itemForm.get('imgFile')?.invalid &&
+              (itemForm.get('imgFile')?.dirty ||
+                itemForm.get('imgFile')?.touched)
+            "
+          >
+            <span
+              class="label-text-alt text-error"
+              *ngIf="itemForm.get('imgFile')?.errors?.['required']"
+              >Item picture is required</span
+            >
+          </div>
+        </label>
+      </div>
+      <div class="mt-6 pb-6">
+        <button class="btn btn-primary w-full" type="submit">Submit</button>
+      </div>
+    </form>
   </div>
-  
+</div>
