--- a/simple-shop-ui/src/app/feature/order/add-order/add-order.component.html
+++ b/simple-shop-ui/src/app/feature/order/add-order/add-order.component.html
@@ -35,26 +35,10 @@
       <span>{{ errorMessage }}</span>
     </div>
     } }
-    <div class="flex space-x-2 items-center">
-      <button class="btn btn-circle btn-ghost" routerLink="/order">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="1.2em"
-          height="1.2em"
-          viewBox="0 0 512 512"
-        >
-          <path
-            fill="none"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="48"
-            d="M244 400L100 256l144-144M120 256h292"
-          />
-        </svg>
-      </button>
-      <h1 class="font-semibold text-2xl tracking-wide">Add Item</h1>
-    </div>
+    <app-page-detail-title
+      link="/order"
+      title="Add new order"
+    ></app-page-detail-title>
     <form class="mt-4" [formGroup]="orderForm" (ngSubmit)="OnSubmit()">
       <div class="space-y-1">
         <label class="form-control w-full max-w-xs">
@@ -97,14 +81,15 @@
           >
             <option disabled selected>Pick one</option>
             @for (option of itemOptions; track option.id) {
-                <option [value]="option.id">{{ option.name }}</option>
-                }
+            <option [value]="option.id">{{ option.name }}</option>
+            }
           </select>
           <div
             class="label"
             *ngIf="
               orderForm.get('itemId')?.invalid &&
-              (orderForm.get('itemId')?.dirty || orderForm.get('itemId')?.touched)
+              (orderForm.get('itemId')?.dirty ||
+                orderForm.get('itemId')?.touched)
             "
           >
             <span
