--- a/simple-shop-ui/src/app/feature/order/order-list/order-list.component.html
+++ b/simple-shop-ui/src/app/feature/order/order-list/order-list.component.html
@@ -197,26 +197,7 @@
   </div>
 </div>
 
-<button
-  class="btn btn-primary btn-circle fixed bottom-5 right-5 shadow-lg hover:bg-primary-focus transition-colors duration-300"
-  aria-label="Add New"
-  routerLink="/add-order"
->
-  <svg
-    xmlns="http://www.w3.org/2000/svg"
-    class="h-6 w-6 text-white"
-    fill="none"
-    viewBox="0 0 24 24"
-    stroke="currentColor"
-  >
-    <path
-      stroke-linecap="round"
-      stroke-linejoin="round"
-      stroke-width="2"
-      d="M12 4v16m8-8H4"
-    />
-  </svg>
-</button>
+<app-add-button link="/add-order"></app-add-button>
 <input
   type="checkbox"
   id="delete-confirm-modal"
